# ajj

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/hooks/: pre-push.sh
.claude/skills/: ajj-guide.md
.github/: CODEOWNERS
crates/eth/: Cargo.toml
crates/eth/src/: lib.rs
crates/pubsub/: Cargo.toml
crates/pubsub/src/: ipc.rs  lib.rs  shared.rs  trait.rs  ws.rs
crates/router/: Cargo.toml
crates/router/src/: axum.rs  ctx.rs  error.rs  lib.rs  macros.rs  primitives.rs  router.rs
crates/router/src/routes/: erased.rs  future.rs  handler.rs  method.rs  mod.rs
examples/: axum.rs  cors.rs  ipc.rs  magic8ball.rs
src/: axum.rs  error.rs  lib.rs  macros.rs  metrics.rs  primitives.rs  router.rs  tasks.rs
src/pubsub/: axum.rs  ipc.rs  ipc_inner.rs  mod.rs  shared.rs  shutdown.rs  trait.rs  ws.rs
src/routes/: ctx.rs  erased.rs  future.rs  handler.rs  method.rs  mod.rs
src/types/: batch.rs  error.rs  macros.rs  mod.rs  req.rs  resp.rs
src/types/resp/: into_error.rs  into_response.rs  mod.rs  payload.rs  ser.rs
tests/: axum_ws.rs  ipc.rs  ws.rs
tests/common/: mod.rs  ws_client.rs
