[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["init4"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/jsonrpc"
repository = "https://github.com/init4tech/jsonrpc"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[workspace.dependencies]
router = { path = "./crates/router" }
pubsub = { path = "./crates/pubsub" }

# alloy = { version = "0.9.2", features = ["json-rpc", "rpc-types"] }
alloy = { git = "https://github.com/alloy-rs/alloy.git", branch = "main", features = ["json-rpc", "rpc-types"] }

pin-project = "1.1.8"
serde_json = "1.0.135"
thiserror = "2.0.9"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"

# dev-dependencies
tokio = { version = "1.42.0", features = ["macros", "rt"] }
