[package]
name = "ajj"

description = "Simple, modern, ergonomic JSON-RPC 2.0 router built with tower and axum"
keywords = ["json-rpc", "jsonrpc", "json"]
categories = ["web-programming::http-server", "web-programming::websocket"]

version = "0.4.0"
edition = "2021"
rust-version = "1.81"
authors = ["init4", "James Prestwich"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/ajj"
repository = "https://github.com/init4tech/ajj"

[dependencies]
bytes = "1.9.0"
opentelemetry = "0.31.0"
pin-project = "1.1.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
thiserror = "2.0.9"
tokio = { version = "1.43.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.13", features = ["io", "rt"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"

# axum
axum = { version = "0.8.1", optional = true }
mime = { version = "0.3.17", optional = true }
opentelemetry-http = { version = "0.31.0", optional = true }

# pubsub
tokio-stream = { version = "0.1.17", optional = true }

# ipc
interprocess = { version = "2.2.2", features = ["async", "tokio"], optional = true }

# ws
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3.31", optional = true }
metrics = "0.24.2"

[dev-dependencies]
ajj = { path = "./", features = ["axum", "ws", "ipc"] }

tempfile = "3.15.0"
tracing-subscriber = "0.3.19"
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.43.0", features = ["full"] }
eyre = "0.6.12"


[features]
default = ["axum", "ws", "ipc"]
axum = ["dep:axum", "dep:mime", "dep:opentelemetry-http"]
pubsub = ["dep:tokio-stream", "axum?/ws"]
ipc = ["pubsub", "dep:interprocess"]
ws = ["pubsub", "dep:tokio-tungstenite", "dep:futures-util"]

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false


[[example]]
name = "ipc"
required-features = ["ipc"]