[package]
name = "router"
description = "JSON-RPC method routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
axum = { version = "0.8.1", optional = true }
pin-project.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = ["axum"]
axum = ["dep:axum"]
